feat: 实现持久会话树